refactor CheckBatchMeansConfidence: rename stdDev to improve clarity and add grandMean method